--- a/tests/integration/targets/vmware_dvs_host/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_host/tasks/main.yml
@@ -16,20 +16,20 @@
       discovery_operation: both
       state: present
 
-      #  - name: Configure Uplink portgroup
-      #    vmware_dvswitch_uplink_pg:
-      #      switch: 'dvs_host_test_switch'
-      #      name: 'dvs_host_test_ul_portgroup'
-      #     
-      #  - name: Create distributed portgroup
-      #    vmware_dvs_portgroup:
-      #      portgroup_name: 'dvs_host_test_portgroup'
-      #      switch_name: 'dvs_host_test_switch'
-      #      portgroup_type: earlyBinding
-      #      state: 'present'
-      #      num_ports: 12
-      #      vlan_id: 777
-      #
+  - name: Configure Uplink portgroup
+    vmware_dvswitch_uplink_pg:
+      switch: 'dvs_host_test_switch'
+      name: 'dvs_host_test_ul_portgroup'
+     
+  - name: Create distributed portgroup
+    vmware_dvs_portgroup:
+      portgroup_name: 'dvs_host_test_portgroup'
+      switch_name: 'dvs_host_test_switch'
+      portgroup_type: earlyBinding
+      state: 'present'
+      num_ports: 12
+      vlan_id: 777
+      
   - name: 'Attach the hosts to the DVSwitch without specifying any vnics'
     vmware_dvs_host:
       esxi_hostname: '{{ esxi1 }}'
@@ -42,13 +42,12 @@
 
 # Cleanup
   always:
-    #  - name: 'Cleanup: detaching hosts from dvs'
-    #    vmware_dvs_host:
-    #      esxi_hostname: "{{ item }}"
-    #      switch_name: 'dvs_host_test_switch'
-    #      state: absent
-    #    with_items: "{{ esxi_hosts }}"
-    #
+    - name: 'Cleanup: detaching hosts from dvs'
+      vmware_dvs_host:
+        esxi_hostname: "{{ esxi1 }}"
+        switch_name: 'dvs_host_test_switch'
+        state: absent
+    
   - name: Deleting distributed portgroup
     vmware_dvs_portgroup:
       portgroup_name: 'dvs_host_test_portgroup'
