--- a/tests/integration/targets/vmware_tag_manager/tasks/main.yml
+++ b/tests/integration/targets/vmware_tag_manager/tasks/main.yml
@@ -2,4 +2,20 @@
 # Copyright: (c) 2020, Abhijeet Kasurde <akasurde@redhat.com>
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
-- include: tag_manager_dict.yml
+- import_role:
+    name: prepare_vmware_tests
+  vars:
+    setup_attach_host: true
+    setup_datastore: true
+    setup_virtualmachines: true
+
+
+- set_fact:
+    cat_one: category_1003
+    tag_one: tag:1003
+
+- include: cleanup.yml
+- block:
+  - include: tag_manager_dict.yml
+  always:
+  - include: cleanup.yml
