--- a/tests/integration/targets/vmware_tag_manager/tasks/tag_manager_dict.yml
+++ b/tests/integration/targets/vmware_tag_manager/tasks/tag_manager_dict.yml
@@ -3,111 +3,111 @@
 # GNU General Public License v3.0+ (see COPYING or https://www.gnu.org/licenses/gpl-3.0.txt)
 
 # Testcase for https://github.com/ansible/ansible/issues/65765
-- when: vcsim is not defined
-  block:
-    - name: Create first category
-      vmware_category:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        category_name: "{{ cat_one }}"
-        category_cardinality: 'multiple'
-        state: present
-      register: category_one_create
 
-    - name: Set category one id
-      set_fact: cat_one_id={{ category_one_create['category_results']['category_id'] }}
+  - name: Create first category
+    vmware_category:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      category_name: "{{ cat_one }}"
+      category_cardinality: 'multiple'
+      state: present
+    register: category_one_create
 
-    - name: Create tag with colon in name
-      vmware_tag:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        tag_name: "{{ tag_one }}"
-        category_id: "{{ cat_one_id }}"
-        state: present
-      register: tag_one_create
+  - name: Set category one id
+    set_fact: cat_one_id={{ category_one_create['category_results']['category_id'] }}
 
-    - name: Check tag is created
-      assert:
-        that:
-          - tag_one_create.changed
+  - name: Create tag with colon in name
+    vmware_tag:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      tag_name: "{{ tag_one }}"
+      category_id: "{{ cat_one_id }}"
+      state: present
+    register: tag_one_create
 
-    - name: Get VM Facts
-      vmware_vm_info:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: False
-      register: vm_info
+  - name: Check tag is created
+    assert:
+      that:
+        - tag_one_create.changed
 
-    - set_fact: vm_name="{{ vm_info['virtual_machines'][0]['guest_name'] }}"
+  - name: Get VM Facts
+    vmware_vm_info:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: False
+    register: vm_info
 
-    - name: Assign tag to given virtual machine
-      vmware_tag_manager:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        tag_names:
-          - category: "{{ cat_one }}"
-            tag: "{{ tag_one }}"
-        object_name: "{{ vm_name }}"
-        object_type: VirtualMachine
-        state: add
-      delegate_to: localhost
-      register: vm_tag_info
+  - set_fact: vm_name="{{ vm_info['virtual_machines'][0]['guest_name'] }}"
 
-    - name: Check if we assigned correct tags
-      assert:
-        that:
-          - vm_tag_info.changed
+  - name: Assign tag to given virtual machine
+    vmware_tag_manager:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      tag_names:
+        - category: "{{ cat_one }}"
+          tag: "{{ tag_one }}"
+      object_name: "{{ vm_name }}"
+      object_type: VirtualMachine
+      state: add
+    register: vm_tag_info
 
-    - name: Remove tag to given virtual machine
-      vmware_tag_manager:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        tag_names:
-          - category: "{{ cat_one }}"
-            tag: "{{ tag_one }}"
-        object_name: "{{ vm_name }}"
-        object_type: VirtualMachine
-        state: remove
-      delegate_to: localhost
-      register: vm_tag_info
+  - name: Assign tag to rw_datastore
+    vmware_tag_manager:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      tag_names:
+        - category: "{{ cat_one }}"
+          tag: "{{ tag_one }}"
+      object_name: "{{ rw_datastore }}"
+      object_type: Datastore
+      state: add
+    register: datastore_tag_info
 
-    - name: Check if we removed correct tag
-      assert:
-        that:
-          - vm_tag_info.changed
+  - name: Check if we assigned correct tags
+    assert:
+      that:
+        - vm_tag_info.changed
+        - datastore_tag_info.changed
 
-    - name: Delete Tags
-      vmware_tag:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        tag_name: "{{ item }}"
-        state: absent
-      register: delete_tag
-      with_items:
-        - "{{ tag_one }}"
+  - name: Remove tag to given virtual machine
+    vmware_tag_manager:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      tag_names:
+        - category: "{{ cat_one }}"
+          tag: "{{ tag_one }}"
+      object_name: "{{ vm_name }}"
+      object_type: VirtualMachine
+      state: remove
+    register: vm_tag_info
 
-    - name: Delete Categories
-      vmware_category:
-        hostname: '{{ vcenter_hostname }}'
-        username: '{{ vcenter_username }}'
-        password: '{{ vcenter_password }}'
-        validate_certs: no
-        category_name: "{{ item }}"
-        state: absent
-      register: delete_categories
-      with_items:
-        - "{{ cat_one }}"
-  vars:
-    cat_one: category_1003
-    tag_one: tag:1003
+  - name: Remove tag to datastore
+    vmware_tag_manager:
+      hostname: '{{ vcenter_hostname }}'
+      username: '{{ vcenter_username }}'
+      password: '{{ vcenter_password }}'
+      validate_certs: no
+      tag_names:
+        - category: "{{ cat_one }}"
+          tag: "{{ tag_one }}"
+      object_name: "{{ rw_datastore }}"
+      object_type: Datastore
+      state: remove
+    register: datastore_tag_info
+
+  - name: Check if we removed correct tag
+    assert:
+      that:
+        - vm_tag_info.changed
+        - datastore_tag_info.changed
